--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,22 +8,22 @@
 </head>
 <body>
     <div id="main">
-        <img id="developerImg" src="/images/developer.png" alt="Developer Photo">
+        <img id="developerImg" src="https://res.cloudinary.com/djdwvelhp/image/upload/v1726649060/developer_lmsjvs.png" alt="Developer Photo">
         <div id="work">
             <p>Work, I can do for you</p>
         </div>
 
         <div id="skills">
            <div id="webDev">
-                <img src="images/web.png" alt="Web Photo">
+                <img src="https://res.cloudinary.com/djdwvelhp/image/upload/v1726649162/web_cpzlor.png" alt="Web Photo">
                 <h4>Web Development</h4>
            </div>
            <div id="appDev">
-                <img src="images/mobile.png" alt="App Photo">
+                <img src="https://res.cloudinary.com/djdwvelhp/image/upload/v1726649106/mobile_bihamh.png" alt="App Photo">
                 <h4>App Development</h4>
            </div>
            <div id="uiux">
-                <img src="images/uiux.png" alt="UI UX photo">
+                <img src="https://res.cloudinary.com/djdwvelhp/image/upload/v1726649135/uiux_n7zjy3.png" alt="UI UX photo">
                 <h4>UI UX Design</h4>
            </div>
         </div>
